samples/_failures_safe/1761499224_86866d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51089d24.c: In function ‘main’:
./samples/SAFE/__tmp_51089d24.c:141:5: error: expected expression at end of input
  141 |     if (rows1 == 0 || cols1 == 0 || rows2 == 0 ||
      |     ^~
./samples/SAFE/__tmp_51089d24.c:141:5: error: expected declaration or statement at end of input
